--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Godot-specific ignores
 .import/
+.godot/
 export.cfg
 export_presets.cfg
 
@@ -8,6 +9,7 @@ export_presets.cfg
 
 # Mono-specific ignores
 .mono/
+
 data_*/
 Ignore/
 *.import
